plugins {
    id 'eclipse'
    id 'net.neoforged.moddev' version '2.0.141'
}

version = '2.1.2'
base.archivesName = "murmol"

java.toolchain.languageVersion = JavaLanguageVersion.of(21)

repositories {
    maven {
        // JEI maven
        url = "https://maven.blamejared.com/"
    }
}

dependencies {
    // JEI：编译用 API，本地运行时带完整 JEI（不打包进最终 JAR）
    compileOnly "mezz.jei:jei-1.21.1-common-api:19.16.4.183"
    compileOnly "mezz.jei:jei-1.21.1-neoforge-api:19.16.4.183"
    runtimeOnly "mezz.jei:jei-1.21.1-neoforge:19.16.4.183"

    // Patchouli：编译用 API（openBookGUI），运行时本地加载完整 Patchouli（不打包进最终 JAR）
    compileOnly "vazkii.patchouli:Patchouli:1.21.1-93-NEOFORGE"
    runtimeOnly "vazkii.patchouli:Patchouli:1.21.1-93-NEOFORGE"
}

neoForge {
    version = "21.1.232"

    runs {
        client {
            client()
        }
        server {
            server()
        }

        configureEach {
            systemProperty 'forge.logging.markers', 'REGISTRIES'
            logLevel = org.slf4j.event.Level.DEBUG
        }
    }

    mods {
        murmol {
            sourceSet sourceSets.main
        }
    }
}

tasks.withType(JavaCompile).configureEach {
    options.encoding = 'UTF-8' // Use the UTF-8 charset for Java compilation
}
